--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "@aws-sdk/client-s3": "^3.478.0",
     "@babel/generator": "^7.23.6",
     "@inquirer/editor": "^1.2.13",
-    "@nuxt/kit": "^3.9.2",
+    "@nuxt/kit": "^3.9.3",
     "@tiptap/core": "2.1.13",
     "@tiptap/extension-highlight": "2.1.13",
     "@tiptap/extension-link": "2.1.13",
@@ -116,8 +116,8 @@
     "@nuxt/devtools": "latest",
     "@nuxt/eslint-config": "^0.1.1",
     "@nuxt/module-builder": "^0.4.0",
-    "@nuxt/schema": "^3.9.2",
-    "@nuxt/test-utils": "^3.9.0",
+    "@nuxt/schema": "3.9.3",
+    "@nuxt/test-utils": "^3.10.0",
     "@types/accept-language-parser": "^1.5.6",
     "@types/babel__generator": "^7.6.8",
     "@types/bytes": "^3.1.4",
